# objectify

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: python-ci.yml  release.yml
objectify/: converter.py
tests/: test_basic.py  test_converter.py
